--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: AIM Robotics
-email: czhao39@gmail.com
+email: AIMRobotics@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   FRC Team 1123 (AIM Robotics)
 baseurl: "" # the subpath of your site, e.g. /blog
