--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,8 @@ baseurl: ""
 url: "https://frc-1123.github.io"
 #twitter_username: jekyllrb
 github_username:  frc-1123
-paginate: 5
+paginate: 10
+paginate_path: "/blog/page:num/"
 
 # Build settings
 markdown: kramdown
