set default layout for posts

--- a/_config.yml
+++ b/_config.yml
@@ -18,3 +18,11 @@ gems:
 exclude:
   - Gemfile
   - Gemfile.lock
+
+defaults:
+  -
+    scope:
+      path: ""
+      type: "posts"
+    values:
+      layout: "post"
